-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.1, 5.6.0 RC, 5.9.3, 5.10.0
-
Android 4 - Samsung Galaxy Tab 3
[Android][Samsung devices]: When starting a sentence in a text input widget it will not start with a capital letter even though this is turned on. This works fine in the simulator and other devices, but for Samsung devices this is not working correctly.
This can be reproduced with the lineedits example
For Gerrit Dashboard: QTBUG-51865 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
214443,4 | Android: Set correct input hints when queried through getCursorCapsMode | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |